--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": ">=7.2",
         "ext-mbstring": "*",
+        "ext-simplexml": "*",
         "guzzlehttp/guzzle": "6.3.*|6.5.*",
         "jms/serializer": "^1.14|^2.0|^3.0"
     },
