--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,22 @@
         "ext-mbstring": "*",
         "ext-simplexml": "*",
         "guzzlehttp/guzzle": "6.3.*|6.5.*",
-        "jms/serializer": "^1.14|^2.0|^3.0"
+        "jms/serializer": "^1.14|^2.0|^3.0",
+        "php-http/discovery": "^1.14",
+        "psr/http-client-implementation": "^1.0",
+        "psr/http-factory-implementation": "^1.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "nyholm/psr7": "^1.4",
+        "pcov/clobber": "^2.0",
+        "php-http/mock-client": "^1.4",
         "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "3.*",
-        "pcov/clobber": "^2.0"
+        "symfony/http-client": "^5.3"
+    },
+    "config": {
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
