--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-simplexml": "*",
-        "guzzlehttp/guzzle": "6.3.*|6.5.*",
         "jms/serializer": "^1.14|^2.0|^3.0",
         "php-http/discovery": "^1.14",
         "psr/http-client-implementation": "^1.0",
@@ -20,7 +19,8 @@
         "php-http/mock-client": "^1.4",
         "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "3.*",
-        "symfony/http-client": "^5.3"
+        "symfony/http-client": "^5.3",
+        "symfony/var-dumper": "^5.3"
     },
     "config": {
         "sort-packages": true
