--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
         "nyholm/psr7": "^1.4",
         "pcov/clobber": "^2.0",
         "php-http/mock-client": "^1.4",
         "phpunit/phpunit": "^8.5",
-        "squizlabs/php_codesniffer": "3.*",
         "symfony/http-client": "^5.3",
         "symfony/var-dumper": "^5.3"
     },
@@ -39,5 +39,9 @@
         "skip-dev": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "scripts": {
+        "php-cs": "@php vendor/bin/php-cs-fixer fix --dry-run",
+        "php-cs-fix": "@php vendor/bin/php-cs-fixer fix"
+    }
 }
