--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "prefer-stable": true,
     "scripts": {
         "php-cs": "@php vendor/bin/php-cs-fixer fix --dry-run",
-        "php-cs-fix": "@php vendor/bin/php-cs-fixer fix"
+        "php-cs-fix": "@php vendor/bin/php-cs-fixer fix",
+        "test": "@php vendor/bin/phpunit tests"
     }
 }
