build: bump minimum requirements for php-http/client-common

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-mbstring": "*",
         "ext-simplexml": "*",
         "jms/serializer": "^1.14|^2.0|^3.0",
+        "php-http/client-common": "^2.4",
         "php-http/discovery": "^1.14",
         "psr/http-client-implementation": "^1.0",
         "psr/http-factory-implementation": "^1.0",
