--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "scripts": {
         "php-cs": "@php vendor/bin/php-cs-fixer fix --dry-run",
         "php-cs-fix": "@php vendor/bin/php-cs-fixer fix",
-        "test": "@php vendor/bin/phpunit tests"
+        "test": "@php vendor/bin/phpunit --configuration phpunit.dist.xml",
+        "code-coverage": "@test --coverage-clover=coverage.xml"
     }
 }
