--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "psalm": "@php vendor/bin/psalm --no-progress",
         "php-cs": "@php vendor/bin/php-cs-fixer fix --dry-run",
         "php-cs-fix": "@php vendor/bin/php-cs-fixer fix",
         "test": "@php vendor/bin/phpunit --configuration phpunit.dist.xml",
