--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php-http/mock-client": "^1.4",
         "phpunit/phpunit": "^8.5",
         "symfony/http-client": "^5.3",
-        "symfony/var-dumper": "^5.3"
+        "symfony/var-dumper": "^5.3",
+        "vimeo/psalm": "^4.8"
     },
     "config": {
         "sort-packages": true
@@ -41,6 +42,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "psalm": "@php vendor/bin/psalm --no-progress",
         "php-cs": "@php vendor/bin/php-cs-fixer fix --dry-run",
         "php-cs-fix": "@php vendor/bin/php-cs-fixer fix",
         "test": "@php vendor/bin/phpunit --configuration phpunit.dist.xml",
